# realestate-agent

./: .env.copy  .gitignore  GEMINI.MD  README.md  agent.py  main.py  pyproject.toml  requirements.txt
agents_gallery/real_estate_agent/tools/: home_search.py
design-docs/: real-estate-agent-design.md
gemini-chat/: gemini-conversation-1758735056096.json
plans/: real-estate-agent-implementation.md
re_agent/: agent.py  main.py
re_agent/tools/: home_search.py  virtual_staging.py
real_estate_agent/: agent.py
real_estate_agent/tools/: home_search.py  virtual_staging.py
tests/: call_nano_banana.py  test_home_search.py  test_virtual_staging.py
tools/: home_search.py  virtual_staging.py
